--- a/dotnetcore-sample/Views/Home/Index.cshtml
+++ b/dotnetcore-sample/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+<h1>Hello, World!</h1>
+<h2>The time on the server is @DateTime.Now</h2>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
